@@ -1,31 +1,5 @@
 package api.arduinothermohygrometer.service;
 
-import static java.util.Collections.emptyList;
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.doNothing;
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
-
-import java.time.LocalDateTime;
-import java.util.List;
-import java.util.Optional;
-import java.util.UUID;
-
-import org.junit.jupiter.api.DisplayName;
-import org.junit.jupiter.api.Nested;
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.ArgumentCaptor;
-import org.mockito.Captor;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.boot.test.system.CapturedOutput;
-import org.springframework.boot.test.system.OutputCaptureExtension;
-
 import api.arduinothermohygrometer.dto.BatteryDto;
 import api.arduinothermohygrometer.exception.ResourceNotCreatedException;
 import api.arduinothermohygrometer.exception.ResourceNotFoundException;
@@ -33,38 +7,51 @@ import api.arduinothermohygrometer.mapper.BatteryModelMapper;
 import api.arduinothermohygrometer.model.Battery;
 import api.arduinothermohygrometer.repository.BatteryRepository;
 import api.arduinothermohygrometer.service.implementation.BatteryServiceImpl;
+import org.junit.jupiter.api.Nested;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.test.util.ReflectionTestUtils;
 
-@DisplayName("BatteryServiceImpl unit tests.")
-@ExtendWith({ MockitoExtension.class, OutputCaptureExtension.class })
+import java.time.LocalDateTime;
+import java.time.temporal.ChronoUnit;
+import java.util.List;
+import java.util.Optional;
+import java.util.UUID;
+
+import static java.util.Collections.emptyList;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
+
+@ExtendWith({MockitoExtension.class})
 class BatteryServiceImplTest {
     @Mock
     private BatteryRepository batteryRepository;
 
-    @Captor
-    private ArgumentCaptor<Battery> batteryArgumentCaptor = ArgumentCaptor.forClass(Battery.class);
-
     @InjectMocks
     private BatteryServiceImpl batteryService;
 
-    @DisplayName("Get methods for BatteryServiceImpl.")
     @Nested
     class GetMethods {
         @Test
         void givenValidId_whenGetBatteryById_thenReturnBattery() {
             UUID id = UUID.randomUUID();
-            LocalDateTime registeredAt = LocalDateTime.now();
-            int batteryStatus = 90;
-            BatteryDto batteryDto = BatteryDto.builder()
-                    .registeredAt(registeredAt)
-                    .batteryStatus(batteryStatus)
-                    .build();
+            LocalDateTime registeredAt = LocalDateTime.now().truncatedTo(ChronoUnit.MINUTES);
+            BatteryDto batteryDto = createBatteryDto(registeredAt, 90);
             Battery battery = BatteryModelMapper.toModel(batteryDto);
             when(batteryRepository.getBatteryById(id)).thenReturn(Optional.of(battery));
 
             BatteryDto result = batteryService.getBatteryById(id);
 
-            assertThat(result)
-                    .isEqualTo(batteryDto);
+            assertThat(result.getId()).isEqualTo(batteryDto.getId());
+            assertThat(result.getRegisteredAt()).isEqualTo(batteryDto.getRegisteredAt());
+            assertThat(result.getBatteryStatus()).isEqualTo(batteryDto.getBatteryStatus());
         }
 
         @Test
@@ -73,135 +60,127 @@ class BatteryServiceImplTest {
             when(batteryRepository.getBatteryById(invalidId)).thenReturn(Optional.empty());
 
             assertThatThrownBy(() -> batteryService.getBatteryById(invalidId))
-                    .isInstanceOf(ResourceNotFoundException.class)
-                    .hasMessage(String.format("Battery with id=%s not found.", invalidId));
+                .isInstanceOf(ResourceNotFoundException.class)
+                .hasMessage("Battery with id=%s not found.".formatted(invalidId));
         }
 
         @Test
         void givenValidTimestamp_whenGetBatteriesByDateOrTimestamp_thenReturnBattery() {
             boolean dateOnly = false;
-            LocalDateTime registeredAt = LocalDateTime.now();
-            int batteryStatus = 90;
-            BatteryDto batteryDto = BatteryDto.builder()
-                    .registeredAt(registeredAt)
-                    .batteryStatus(batteryStatus)
-                    .build();
-            List<BatteryDto> batteryDtos = List.of(batteryDto);
+            LocalDateTime registeredAt = LocalDateTime.now().truncatedTo(ChronoUnit.MINUTES);
+            BatteryDto batteryDto = createBatteryDto(registeredAt, 90);
             List<Battery> batteries = List.of(BatteryModelMapper.toModel(batteryDto));
             when(batteryRepository.getBatteryByTimestamp(registeredAt)).thenReturn(batteries);
 
             List<BatteryDto> result = batteryService.getBatteriesByDateOrTimestamp(registeredAt, dateOnly);
 
-            verify(batteryRepository, times(1)).getBatteryByTimestamp(registeredAt);
+            verify(batteryRepository).getBatteryByTimestamp(registeredAt);
             assertThat(result)
-                    .containsExactlyElementsOf(batteryDtos);
+                .hasSize(1)
+                .first()
+                .satisfies(battery -> {
+                    assertThat(battery.getId()).isEqualTo(batteryDto.getId());
+                    assertThat(battery.getRegisteredAt()).isEqualTo(batteryDto.getRegisteredAt());
+                    assertThat(battery.getBatteryStatus()).isEqualTo(batteryDto.getBatteryStatus());
+                });
         }
 
         @Test
         void givenInvalidTimestamp_whenGetBatteriesByDateOrTimestamp_thenReturnEmptyList() {
             boolean dateOnly = false;
-            LocalDateTime registeredAt = LocalDateTime.now();
+            LocalDateTime registeredAt = LocalDateTime.now().truncatedTo(ChronoUnit.MINUTES);
             when(batteryRepository.getBatteryByTimestamp(registeredAt)).thenReturn(emptyList());
 
             List<BatteryDto> result = batteryService.getBatteriesByDateOrTimestamp(registeredAt, dateOnly);
 
-            verify(batteryRepository, times(1)).getBatteryByTimestamp(registeredAt);
+            verify(batteryRepository).getBatteryByTimestamp(registeredAt);
             assertThat(result)
-                    .isEmpty();
+                .isEmpty();
         }
 
         @Test
         void givenValidDate_whenGetBatteriesByDateOrTimestamp_thenReturnBatteries() {
             boolean dateOnly = true;
-            LocalDateTime registeredAt = LocalDateTime.now();
-            int batteryStatus = 90;
-            int batteryStatus2 = 95;
-            BatteryDto batteryDto = BatteryDto.builder()
-                    .registeredAt(registeredAt)
-                    .batteryStatus(batteryStatus)
-                    .build();
-            BatteryDto batteryDto2 = BatteryDto.builder()
-                    .registeredAt(registeredAt.minusHours(1))
-                    .batteryStatus(batteryStatus2)
-                    .build();
-            List<BatteryDto> batteryDtos = List.of(batteryDto, batteryDto2);
+            LocalDateTime registeredAt = LocalDateTime.now().truncatedTo(ChronoUnit.MINUTES);
+            List<BatteryDto> batteryDtos = List.of(
+                createBatteryDto(registeredAt, 90),
+                createBatteryDto(registeredAt.minusHours(1), 85)
+            );
             List<Battery> batteries = batteryDtos.stream()
-                    .map(BatteryModelMapper::toModel)
-                    .toList();
+                                                 .map(BatteryModelMapper::toModel)
+                                                 .toList();
             when(batteryRepository.getBatteriesByDate(registeredAt.toLocalDate())).thenReturn(batteries);
 
             List<BatteryDto> result = batteryService.getBatteriesByDateOrTimestamp(registeredAt, dateOnly);
 
-            verify(batteryRepository, times(1)).getBatteriesByDate(registeredAt.toLocalDate());
+            verify(batteryRepository).getBatteriesByDate(registeredAt.toLocalDate());
             assertThat(result)
-                    .containsExactlyElementsOf(batteryDtos);
+                .hasSize(2)
+                .first()
+                .satisfies(battery -> {
+                    assertThat(battery.getId()).isEqualTo(batteryDtos.getFirst().getId());
+                    assertThat(battery.getRegisteredAt()).isEqualTo(batteryDtos.getFirst().getRegisteredAt());
+                    assertThat(battery.getBatteryStatus()).isEqualTo(batteryDtos.getFirst().getBatteryStatus());
+                });
         }
 
         @Test
         void givenInvalidDate_whenGetBatteriesByDateOrTimestamp_thenReturnEmptyList() {
             boolean dateOnly = true;
-            LocalDateTime registeredAt = LocalDateTime.now();
+            LocalDateTime registeredAt = LocalDateTime.now().truncatedTo(ChronoUnit.MINUTES);
             when(batteryRepository.getBatteriesByDate(registeredAt.toLocalDate())).thenReturn(emptyList());
 
             List<BatteryDto> result = batteryService.getBatteriesByDateOrTimestamp(registeredAt, dateOnly);
 
-            verify(batteryRepository, times(1)).getBatteriesByDate(registeredAt.toLocalDate());
-            assertThat(result)
-                    .isEmpty();
+            verify(batteryRepository).getBatteriesByDate(registeredAt.toLocalDate());
+            assertThat(result).isEmpty();
         }
     }
 
-    @DisplayName("Create methods for BatteryServiceImpl.")
     @Nested
     class CreateMethods {
         @Test
         void givenValidBatteryModel_whenCreateBattery_thenReturnCreatedBattery() {
-            LocalDateTime registeredAt = LocalDateTime.now();
-            int batteryStatus = 90;
-            BatteryDto batteryDto = BatteryDto.builder()
-                    .registeredAt(registeredAt)
-                    .batteryStatus(batteryStatus)
-                    .build();
-            Optional<Battery> battery = Optional.of(new Battery(registeredAt, batteryStatus));
-            when(batteryRepository.createBattery(any())).thenReturn(battery);
+            LocalDateTime registeredAt = LocalDateTime.now().truncatedTo(ChronoUnit.MINUTES);
+            BatteryDto batteryDto = createBatteryDto(registeredAt, 90);
+            Battery battery = new Battery(registeredAt, 90);
+            ReflectionTestUtils.setField(battery, "id", UUID.randomUUID());
+            when(batteryRepository.createBattery(any(Battery.class))).thenReturn(Optional.of(battery));
 
             BatteryDto result = batteryService.createBattery(batteryDto);
 
-            verify(batteryRepository, times(1)).createBattery(batteryArgumentCaptor.capture());
-            assertThat(result)
-                    .isEqualTo(batteryDto);
+            verify(batteryRepository).createBattery(any(Battery.class));
+            assertThat(result.getId()).isNotNull();
+            assertThat(result.getRegisteredAt()).isEqualTo(batteryDto.getRegisteredAt());
+            assertThat(result.getBatteryStatus()).isEqualTo(batteryDto.getBatteryStatus());
         }
 
         @Test
-        void givenInvalidBatteryModel_whenCreateBattery_thenThrowResourceNotCreatedException() {
-            assertThatThrownBy(() -> batteryService.createBattery(null))
-                    .isInstanceOf(ResourceNotCreatedException.class)
-                    .hasMessage("Battery cannot be created.");
+        void givenEmptyBatteryModel_whenCreateBattery_thenThrowResourceNotCreatedException() {
+            LocalDateTime registeredAt = LocalDateTime.now().truncatedTo(ChronoUnit.MINUTES);
+            BatteryDto batteryDto = createBatteryDto(registeredAt, 90);
+            when(batteryRepository.createBattery(any(Battery.class))).thenReturn(Optional.empty());
+
+            assertThatThrownBy(() -> batteryService.createBattery(batteryDto))
+                .isInstanceOf(ResourceNotCreatedException.class)
+                .hasMessage("Battery cannot be created.");
         }
     }
 
-    @DisplayName("Delete methods for BatteryServiceImpl.")
     @Nested
     class DeleteMethods {
         @Test
-        void givenValidId_whenDeleteBatteryById_thenDeleteBattery(final CapturedOutput capturedOutput) {
+        void givenValidId_whenDeleteBatteryById_thenDeleteBattery() {
             UUID id = UUID.randomUUID();
-            LocalDateTime registeredAt = LocalDateTime.now();
-            int batteryStatus = 90;
-            BatteryDto batteryDto = BatteryDto.builder()
-                    .registeredAt(registeredAt)
-                    .batteryStatus(batteryStatus)
-                    .build();
+            LocalDateTime registeredAt = LocalDateTime.now().truncatedTo(ChronoUnit.MINUTES);
+            BatteryDto batteryDto = createBatteryDto(registeredAt, 90);
             Battery battery = BatteryModelMapper.toModel(batteryDto);
             when(batteryRepository.getBatteryById(id)).thenReturn(Optional.of(battery));
-            doNothing().when(batteryRepository).deleteBatteryById(id);
 
             batteryService.deleteBatteryById(id);
 
-            verify(batteryRepository, times(1)).getBatteryById(id);
-            verify(batteryRepository, times(1)).deleteBatteryById(id);
-            assertThat(capturedOutput)
-                    .contains(String.format("Battery with id=%s deleted.", id));
+            verify(batteryRepository).getBatteryById(id);
+            verify(batteryRepository).deleteBatteryById(id);
         }
 
         @Test
@@ -210,85 +189,72 @@ class BatteryServiceImplTest {
             when(batteryRepository.getBatteryById(invalidId)).thenReturn(Optional.empty());
 
             assertThatThrownBy(() -> batteryService.deleteBatteryById(invalidId))
-                    .isInstanceOf(ResourceNotFoundException.class)
-                    .hasMessage(String.format("Battery with id=%s not found.", invalidId));
+                .isInstanceOf(ResourceNotFoundException.class)
+                .hasMessage("Battery with id=%s not found.".formatted(invalidId));
         }
 
         @Test
-        void givenValidTimestamp_whenDeleteBatteryByDateOrTimestamp_thenDeleteBattery(final CapturedOutput capturedOutput) {
+        void givenValidTimestamp_whenDeleteBatteryByDateOrTimestamp_thenDeleteBattery() {
             boolean dateOnly = false;
-            LocalDateTime registeredAt = LocalDateTime.now();
-            int batteryStatus = 90;
-            BatteryDto batteryDto = BatteryDto.builder()
-                    .registeredAt(registeredAt)
-                    .batteryStatus(batteryStatus)
-                    .build();
+            LocalDateTime registeredAt = LocalDateTime.now().truncatedTo(ChronoUnit.MINUTES);
+            BatteryDto batteryDto = createBatteryDto(registeredAt, 90);
             List<Battery> batteries = List.of(BatteryModelMapper.toModel(batteryDto));
             when(batteryRepository.getBatteryByTimestamp(registeredAt)).thenReturn(batteries);
-            doNothing().when(batteryRepository).deleteBatteryByTimestamp(registeredAt);
 
             batteryService.deleteBatteriesByDateOrTimestamp(registeredAt, dateOnly);
 
-            verify(batteryRepository, times(1)).getBatteryByTimestamp(registeredAt);
-            verify(batteryRepository, times(1)).deleteBatteryByTimestamp(registeredAt);
-            assertThat(capturedOutput)
-                    .contains(String.format("Deleted battery with timestamp=%s.", batteries.getFirst().getRegisteredAt()));
+            verify(batteryRepository).getBatteryByTimestamp(registeredAt);
+            verify(batteryRepository).deleteBatteryByTimestamp(registeredAt);
         }
 
         @Test
-        void givenInvalidTimestamp_whenDeleteBatteryByDateOrTimestamp_thenReturn(final CapturedOutput capturedOutput) {
+        void givenInvalidTimestamp_whenDeleteBatteryByDateOrTimestamp_thenReturn() {
             boolean dateOnly = false;
-            LocalDateTime registeredAt = LocalDateTime.now();
+            LocalDateTime registeredAt = LocalDateTime.now().truncatedTo(ChronoUnit.MINUTES);
             when(batteryRepository.getBatteryByTimestamp(registeredAt)).thenReturn(emptyList());
 
             batteryService.deleteBatteriesByDateOrTimestamp(registeredAt, dateOnly);
 
-            verify(batteryRepository, times(1)).getBatteryByTimestamp(registeredAt);
+            verify(batteryRepository).getBatteryByTimestamp(registeredAt);
             verify(batteryRepository, times(0)).deleteBatteryByTimestamp(registeredAt);
-            assertThat(capturedOutput)
-                    .contains(String.format("Batteries registeredAt=%s not found.", registeredAt));
         }
 
         @Test
-        void givenValidDate_whenDeleteBatteryByDateOrTimestamp_thenDeleteBattery(final CapturedOutput capturedOutput) {
+        void givenValidDate_whenDeleteBatteryByDateOrTimestamp_thenDeleteBattery() {
             boolean dateOnly = true;
-            LocalDateTime registeredAt = LocalDateTime.now();
-            int batteryStatus = 90;
-            BatteryDto batteryDto = BatteryDto.builder()
-                    .registeredAt(registeredAt)
-                    .batteryStatus(batteryStatus)
-                    .build();
-            BatteryDto batteryDto2 = BatteryDto.builder()
-                    .registeredAt(registeredAt.minusHours(1))
-                    .batteryStatus(batteryStatus)
-                    .build();
-            List<BatteryDto> batteryDtos = List.of(batteryDto, batteryDto2);
+            LocalDateTime registeredAt = LocalDateTime.now().truncatedTo(ChronoUnit.MINUTES);
+            List<BatteryDto> batteryDtos = List.of(
+                createBatteryDto(registeredAt, 90),
+                createBatteryDto(registeredAt.minusHours(1), 85)
+            );
             List<Battery> batteries = batteryDtos.stream()
-                    .map(BatteryModelMapper::toModel)
-                    .toList();
+                                                 .map(BatteryModelMapper::toModel)
+                                                 .toList();
             when(batteryRepository.getBatteriesByDate(registeredAt.toLocalDate())).thenReturn(batteries);
-            doNothing().when(batteryRepository).deleteBatteriesByDate(registeredAt.toLocalDate());
 
             batteryService.deleteBatteriesByDateOrTimestamp(registeredAt, dateOnly);
 
-            verify(batteryRepository, times(1)).getBatteriesByDate(registeredAt.toLocalDate());
-            verify(batteryRepository, times(1)).deleteBatteriesByDate(registeredAt.toLocalDate());
-            assertThat(capturedOutput)
-                    .contains(String.format("Deleted batteries with date=%s.", batteries.getFirst().getRegisteredAt().toLocalDate()));
+            verify(batteryRepository).getBatteriesByDate(registeredAt.toLocalDate());
+            verify(batteryRepository).deleteBatteriesByDate(registeredAt.toLocalDate());
         }
 
         @Test
-        void givenInvalidDate_whenDeleteBatteryByDateOrTimestamp_thenReturn(final CapturedOutput capturedOutput) {
+        void givenInvalidDate_whenDeleteBatteryByDateOrTimestamp_thenReturn() {
             boolean dateOnly = true;
-            LocalDateTime registeredAt = LocalDateTime.now();
+            LocalDateTime registeredAt = LocalDateTime.now().truncatedTo(ChronoUnit.MINUTES);
             when(batteryRepository.getBatteriesByDate(registeredAt.toLocalDate())).thenReturn(emptyList());
 
             batteryService.deleteBatteriesByDateOrTimestamp(registeredAt, dateOnly);
 
-            verify(batteryRepository, times(1)).getBatteriesByDate(registeredAt.toLocalDate());
+            verify(batteryRepository).getBatteriesByDate(registeredAt.toLocalDate());
             verify(batteryRepository, times(0)).deleteBatteriesByDate(registeredAt.toLocalDate());
-            assertThat(capturedOutput)
-                    .contains(String.format("Batteries registeredAt=%s not found.", registeredAt));
         }
+    }
+
+    private BatteryDto createBatteryDto(LocalDateTime registeredAt, int batteryStatus) {
+        return BatteryDto.builder()
+                         .registeredAt(registeredAt)
+                         .batteryStatus(batteryStatus)
+                         .build();
     }
 }
