@@ -1,31 +1,5 @@
 package api.arduinothermohygrometer.service;
 
-import static java.util.Collections.emptyList;
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.doNothing;
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
-
-import java.time.LocalDateTime;
-import java.util.List;
-import java.util.Optional;
-import java.util.UUID;
-
-import org.junit.jupiter.api.DisplayName;
-import org.junit.jupiter.api.Nested;
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.ArgumentCaptor;
-import org.mockito.Captor;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.boot.test.system.CapturedOutput;
-import org.springframework.boot.test.system.OutputCaptureExtension;
-
 import api.arduinothermohygrometer.dto.TemperatureDto;
 import api.arduinothermohygrometer.exception.ResourceNotCreatedException;
 import api.arduinothermohygrometer.exception.ResourceNotFoundException;
@@ -33,38 +7,52 @@ import api.arduinothermohygrometer.mapper.TemperatureModelMapper;
 import api.arduinothermohygrometer.model.Temperature;
 import api.arduinothermohygrometer.repository.TemperatureRepository;
 import api.arduinothermohygrometer.service.implementation.TemperatureServiceImpl;
+import org.junit.jupiter.api.Nested;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.boot.test.system.OutputCaptureExtension;
+import org.springframework.test.util.ReflectionTestUtils;
 
-@DisplayName("TemperatureServiceImpl unit tests.")
-@ExtendWith({ MockitoExtension.class, OutputCaptureExtension.class })
+import java.time.LocalDateTime;
+import java.time.temporal.ChronoUnit;
+import java.util.List;
+import java.util.Optional;
+import java.util.UUID;
+
+import static java.util.Collections.emptyList;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
+
+@ExtendWith({MockitoExtension.class, OutputCaptureExtension.class})
 class TemperatureServiceImplTest {
     @Mock
     private TemperatureRepository temperatureRepository;
 
-    @Captor
-    private ArgumentCaptor<Temperature> temperatureArgumentCaptor = ArgumentCaptor.forClass(Temperature.class);
-
     @InjectMocks
     private TemperatureServiceImpl temperatureService;
 
-    @DisplayName("Get methods for TemperatureServiceImpl.")
     @Nested
     class GetMethods {
         @Test
         void givenValidId_whenGetTemperatureById_thenReturnTemperature() {
             UUID id = UUID.randomUUID();
-            LocalDateTime registeredAt = LocalDateTime.now();
-            Double temp = 70.00;
-            TemperatureDto temperatureDto = TemperatureDto.builder()
-                    .registeredAt(registeredAt)
-                    .temp(temp)
-                    .build();
+            LocalDateTime registeredAt = LocalDateTime.now().truncatedTo(ChronoUnit.MINUTES);
+            TemperatureDto temperatureDto = createTemperatureDto(registeredAt, 70.00);
             Temperature temperature = TemperatureModelMapper.toModel(temperatureDto);
             when(temperatureRepository.getTemperatureById(id)).thenReturn(Optional.of(temperature));
 
             TemperatureDto result = temperatureService.getTemperatureById(id);
 
-            assertThat(result)
-                    .isEqualTo(temperatureDto);
+            assertThat(result.getId()).isEqualTo(temperatureDto.getId());
+            assertThat(result.getRegisteredAt()).isEqualTo(temperatureDto.getRegisteredAt());
+            assertThat(result.getTemp()).isEqualTo(temperatureDto.getTemp());
         }
 
         @Test
@@ -73,135 +61,128 @@ class TemperatureServiceImplTest {
             when(temperatureRepository.getTemperatureById(invalidId)).thenReturn(Optional.empty());
 
             assertThatThrownBy(() -> temperatureService.getTemperatureById(invalidId))
-                    .isInstanceOf(ResourceNotFoundException.class)
-                    .hasMessage(String.format("Temperature with id=%s not found.", invalidId));
+                .isInstanceOf(ResourceNotFoundException.class)
+                .hasMessage("Temperature with id=%s not found.".formatted(invalidId));
         }
 
         @Test
         void givenValidTimestamp_whenGetTemperaturesByDateOrTimestamp_thenReturnTemperature() {
             boolean dateOnly = false;
-            LocalDateTime registeredAt = LocalDateTime.now();
-            Double temp = 75.00;
-            TemperatureDto temperatureDto = TemperatureDto.builder()
-                    .registeredAt(registeredAt)
-                    .temp(temp)
-                    .build();
-            List<TemperatureDto> temperatureDtos = List.of(temperatureDto);
+            LocalDateTime registeredAt = LocalDateTime.now().truncatedTo(ChronoUnit.MINUTES);
+            TemperatureDto temperatureDto = createTemperatureDto(registeredAt, 70.00);
             List<Temperature> temperatures = List.of(TemperatureModelMapper.toModel(temperatureDto));
             when(temperatureRepository.getTemperatureByTimestamp(registeredAt)).thenReturn(temperatures);
 
             List<TemperatureDto> result = temperatureService.getTemperaturesByDateOrTimestamp(registeredAt, dateOnly);
 
-            verify(temperatureRepository, times(1)).getTemperatureByTimestamp(registeredAt);
+            verify(temperatureRepository).getTemperatureByTimestamp(registeredAt);
             assertThat(result)
-                    .containsExactlyElementsOf(temperatureDtos);
+                .hasSize(1)
+                .first()
+                .satisfies(temperature -> {
+                    assertThat(temperature.getId()).isEqualTo(temperatureDto.getId());
+                    assertThat(temperature.getRegisteredAt()).isEqualTo(temperatureDto.getRegisteredAt());
+                    assertThat(temperature.getTemp()).isEqualTo(temperatureDto.getTemp());
+                });
         }
 
         @Test
         void givenInvalidTimestamp_whenGetTemperaturesByDateOrTimestamp_thenReturnEmptyList() {
             boolean dateOnly = false;
-            LocalDateTime registeredAt = LocalDateTime.now();
+            LocalDateTime registeredAt = LocalDateTime.now().truncatedTo(ChronoUnit.MINUTES);
             when(temperatureRepository.getTemperatureByTimestamp(registeredAt)).thenReturn(emptyList());
 
             List<TemperatureDto> result = temperatureService.getTemperaturesByDateOrTimestamp(registeredAt, dateOnly);
 
-            verify(temperatureRepository, times(1)).getTemperatureByTimestamp(registeredAt);
+            verify(temperatureRepository).getTemperatureByTimestamp(registeredAt);
             assertThat(result)
-                    .isEmpty();
+                .isEmpty();
         }
 
         @Test
         void givenValidDate_whenGetTemperaturesByDateOrTimestamp_thenReturnTemperatures() {
             boolean dateOnly = true;
-            LocalDateTime registeredAt = LocalDateTime.now();
-            Double temp = 75.00;
-            Double temp2 = 80.00;
-            TemperatureDto temperatureDto = TemperatureDto.builder()
-                    .registeredAt(registeredAt)
-                    .temp(temp)
-                    .build();
-            TemperatureDto temperatureDto2 = TemperatureDto.builder()
-                    .registeredAt(registeredAt.minusHours(1))
-                    .temp(temp2)
-                    .build();
-            List<TemperatureDto> temperatureDtos = List.of(temperatureDto, temperatureDto2);
+            LocalDateTime registeredAt = LocalDateTime.now().truncatedTo(ChronoUnit.MINUTES);
+            List<TemperatureDto> temperatureDtos = List.of(
+                createTemperatureDto(registeredAt, 70.00),
+                createTemperatureDto(registeredAt, 65.00)
+            );
             List<Temperature> temperatures = temperatureDtos.stream()
-                    .map(TemperatureModelMapper::toModel)
-                    .toList();
+                                                            .map(TemperatureModelMapper::toModel)
+                                                            .toList();
             when(temperatureRepository.getTemperaturesByDate(registeredAt.toLocalDate())).thenReturn(temperatures);
 
             List<TemperatureDto> result = temperatureService.getTemperaturesByDateOrTimestamp(registeredAt, dateOnly);
 
-            verify(temperatureRepository, times(1)).getTemperaturesByDate(registeredAt.toLocalDate());
+            verify(temperatureRepository).getTemperaturesByDate(registeredAt.toLocalDate());
             assertThat(result)
-                    .containsExactlyElementsOf(temperatureDtos);
+                .hasSize(2)
+                .first()
+                .satisfies(temperature -> {
+                    assertThat(temperature.getId()).isEqualTo(temperatureDtos.getFirst().getId());
+                    assertThat(temperature.getRegisteredAt()).isEqualTo(temperatureDtos.getFirst().getRegisteredAt());
+                    assertThat(temperature.getTemp()).isEqualTo(temperatureDtos.getFirst().getTemp());
+                });
         }
 
         @Test
         void givenInvalidDate_whenGetTemperaturesByDate_thenReturnEmptyList() {
             boolean dateOnly = true;
-            LocalDateTime registeredAt = LocalDateTime.now();
+            LocalDateTime registeredAt = LocalDateTime.now().truncatedTo(ChronoUnit.MINUTES);
             when(temperatureRepository.getTemperaturesByDate(registeredAt.toLocalDate())).thenReturn(emptyList());
 
             List<TemperatureDto> result = temperatureService.getTemperaturesByDateOrTimestamp(registeredAt, dateOnly);
 
-            verify(temperatureRepository, times(1)).getTemperaturesByDate(registeredAt.toLocalDate());
+            verify(temperatureRepository).getTemperaturesByDate(registeredAt.toLocalDate());
             assertThat(result)
-                    .isEmpty();
+                .isEmpty();
         }
     }
 
-    @DisplayName("Create methods for TemperatureServiceImpl.")
     @Nested
     class CreateMethods {
         @Test
         void givenValidTemperatureModel_whenCreateTemperature_thenReturnCreatedTemperature() {
-            LocalDateTime registeredAt = LocalDateTime.now();
-            Double temp = 75.00;
-            TemperatureDto temperatureDto = TemperatureDto.builder()
-                    .registeredAt(registeredAt)
-                    .temp(temp)
-                    .build();
-            Optional<Temperature> temperature = Optional.of(new Temperature(registeredAt, temp));
-            when(temperatureRepository.createTemperature(any())).thenReturn(temperature);
+            LocalDateTime registeredAt = LocalDateTime.now().truncatedTo(ChronoUnit.MINUTES);
+            TemperatureDto temperatureDto = createTemperatureDto(registeredAt, 70.00);
+            Temperature temperature = new Temperature(registeredAt, 70.00);
+            ReflectionTestUtils.setField(temperature, "id", UUID.randomUUID());
+            when(temperatureRepository.createTemperature(any(Temperature.class))).thenReturn(Optional.of(temperature));
 
             TemperatureDto result = temperatureService.createTemperature(temperatureDto);
 
-            verify(temperatureRepository, times(1)).createTemperature(temperatureArgumentCaptor.capture());
-            assertThat(result)
-                    .isEqualTo(temperatureDto);
+            verify(temperatureRepository).createTemperature(any(Temperature.class));
+            assertThat(result.getId()).isNotNull();
+            assertThat(result.getRegisteredAt()).isEqualTo(temperatureDto.getRegisteredAt());
+            assertThat(result.getTemp()).isEqualTo(temperatureDto.getTemp());
         }
 
         @Test
         void givenInvalidTemperatureModel_whenCreateTemperature_thenThrowResourceNotCreatedException() {
-            assertThatThrownBy(() -> temperatureService.createTemperature(null))
-                    .isInstanceOf(ResourceNotCreatedException.class)
-                    .hasMessage("Temperature cannot be created.");
+            LocalDateTime registeredAt = LocalDateTime.now().truncatedTo(ChronoUnit.MINUTES);
+            TemperatureDto temperatureDto = createTemperatureDto(registeredAt, 70.00);
+            when(temperatureRepository.createTemperature(any(Temperature.class))).thenReturn(Optional.empty());
+
+            assertThatThrownBy(() -> temperatureService.createTemperature(temperatureDto))
+                .isInstanceOf(ResourceNotCreatedException.class)
+                .hasMessage("Temperature cannot be created.");
         }
     }
 
-    @DisplayName("Delete methods for TemperatureServiceImpl.")
     @Nested
     class DeleteMethods {
         @Test
-        void givenValidId_whenDeleteTemperatureById_thenDeleteTemperature(final CapturedOutput capturedOutput) {
+        void givenValidId_whenDeleteTemperatureById_thenDeleteTemperature() {
             UUID id = UUID.randomUUID();
-            LocalDateTime registeredAt = LocalDateTime.now();
-            Double temp = 75.00;
-            TemperatureDto temperatureDto = TemperatureDto.builder()
-                    .registeredAt(registeredAt)
-                    .temp(temp)
-                    .build();
+            LocalDateTime registeredAt = LocalDateTime.now().truncatedTo(ChronoUnit.MINUTES);
+            TemperatureDto temperatureDto = createTemperatureDto(registeredAt, 70.00);
             Temperature temperature = TemperatureModelMapper.toModel(temperatureDto);
             when(temperatureRepository.getTemperatureById(id)).thenReturn(Optional.of(temperature));
-            doNothing().when(temperatureRepository).deleteTemperatureById(id);
 
             temperatureService.deleteTemperatureById(id);
 
-            verify(temperatureRepository, times(1)).getTemperatureById(id);
-            verify(temperatureRepository, times(1)).deleteTemperatureById(id);
-            assertThat(capturedOutput)
-                    .contains(String.format("Temperature with id=%s deleted.", id));
+            verify(temperatureRepository).getTemperatureById(id);
+            verify(temperatureRepository).deleteTemperatureById(id);
         }
 
         @Test
@@ -210,78 +191,72 @@ class TemperatureServiceImplTest {
             when(temperatureRepository.getTemperatureById(invalidId)).thenReturn(Optional.empty());
 
             assertThatThrownBy(() -> temperatureService.deleteTemperatureById(invalidId))
-                    .isInstanceOf(ResourceNotFoundException.class)
-                    .hasMessage(String.format("Temperature with id=%s not found.", invalidId));
+                .isInstanceOf(ResourceNotFoundException.class)
+                .hasMessage("Temperature with id=%s not found.".formatted(invalidId));
         }
 
         @Test
-        void givenValidTimestamp_whenDeleteTemperaturesByDateOrTimestamp_thenDeleteTemperature(final CapturedOutput capturedOutput) {
+        void givenValidTimestamp_whenDeleteTemperaturesByDateOrTimestamp_thenDeleteTemperature() {
             boolean dateOnly = false;
-            LocalDateTime registeredAt = LocalDateTime.now();
-            Double temp = 75.00;
-            TemperatureDto temperatureDto = TemperatureDto.builder()
-                    .registeredAt(registeredAt)
-                    .temp(temp)
-                    .build();
+            LocalDateTime registeredAt = LocalDateTime.now().truncatedTo(ChronoUnit.MINUTES);
+            TemperatureDto temperatureDto = createTemperatureDto(registeredAt, 70.00);
             List<Temperature> temperatures = List.of(TemperatureModelMapper.toModel(temperatureDto));
             when(temperatureRepository.getTemperatureByTimestamp(registeredAt)).thenReturn(temperatures);
-            doNothing().when(temperatureRepository).deleteTemperatureByTimestamp(registeredAt);
 
             temperatureService.deleteTemperaturesByDateOrTimestamp(registeredAt, dateOnly);
 
-            verify(temperatureRepository, times(1)).getTemperatureByTimestamp(registeredAt);
-            verify(temperatureRepository, times(1)).deleteTemperatureByTimestamp(registeredAt);
-            assertThat(capturedOutput)
-                    .contains(String.format("Deleted temperature with timestamp=%s.", temperatures.getFirst().getRegisteredAt()));
+            verify(temperatureRepository).getTemperatureByTimestamp(registeredAt);
+            verify(temperatureRepository).deleteTemperatureByTimestamp(registeredAt);
         }
 
         @Test
-        void givenInvalidTimestamp_whenDeleteTemperaturesByDateOrTimestamp_thenReturn(final CapturedOutput capturedOutput) {
+        void givenInvalidTimestamp_whenDeleteTemperaturesByDateOrTimestamp_thenReturn() {
             boolean dateOnly = false;
-            LocalDateTime registeredAt = LocalDateTime.now();
+            LocalDateTime registeredAt = LocalDateTime.now().truncatedTo(ChronoUnit.MINUTES);
             when(temperatureRepository.getTemperatureByTimestamp(registeredAt)).thenReturn(emptyList());
 
             temperatureService.deleteTemperaturesByDateOrTimestamp(registeredAt, dateOnly);
 
-            verify(temperatureRepository, times(1)).getTemperatureByTimestamp(registeredAt);
+            verify(temperatureRepository).getTemperatureByTimestamp(registeredAt);
             verify(temperatureRepository, times(0)).deleteTemperatureByTimestamp(registeredAt);
-            assertThat(capturedOutput)
-                    .contains(String.format("Temperatures registeredAt=%s not found.", registeredAt));
         }
 
         @Test
-        void givenValidDate_whenDeleteTemperaturesByDateOrTimestamp_thenDeleteTemperature(final CapturedOutput capturedOutput) {
+        void givenValidDate_whenDeleteTemperaturesByDateOrTimestamp_thenDeleteTemperature() {
             boolean dateOnly = true;
             LocalDateTime registeredAt = LocalDateTime.now();
-            Double temp = 75.00;
-            TemperatureDto temperatureDto = TemperatureDto.builder()
-                    .registeredAt(registeredAt)
-                    .temp(temp)
-                    .build();
-            List<Temperature> temperatures = List.of(TemperatureModelMapper.toModel(temperatureDto));
+            List<TemperatureDto> temperatureDtos = List.of(
+                createTemperatureDto(registeredAt, 70.00),
+                createTemperatureDto(registeredAt, 65.00)
+            );
+            List<Temperature> temperatures = temperatureDtos.stream()
+                                                            .map(TemperatureModelMapper::toModel)
+                                                            .toList();
             when(temperatureRepository.getTemperaturesByDate(registeredAt.toLocalDate())).thenReturn(temperatures);
-            doNothing().when(temperatureRepository).deleteTemperaturesByDate(registeredAt.toLocalDate());
 
             temperatureService.deleteTemperaturesByDateOrTimestamp(registeredAt, dateOnly);
 
-            verify(temperatureRepository, times(1)).getTemperaturesByDate(registeredAt.toLocalDate());
-            verify(temperatureRepository, times(1)).deleteTemperaturesByDate(registeredAt.toLocalDate());
-            assertThat(capturedOutput)
-                    .contains(String.format("Deleted temperatures with date=%s.", temperatures.getFirst().getRegisteredAt().toLocalDate()));
+            verify(temperatureRepository).getTemperaturesByDate(registeredAt.toLocalDate());
+            verify(temperatureRepository).deleteTemperaturesByDate(registeredAt.toLocalDate());
         }
 
         @Test
-        void givenInvalidDate_whenDeleteTemperaturesByDateOrTimestamp_thenReturn(final CapturedOutput capturedOutput) {
+        void givenInvalidDate_whenDeleteTemperaturesByDateOrTimestamp_thenReturn() {
             boolean dateOnly = true;
             LocalDateTime registeredAt = LocalDateTime.now();
             when(temperatureRepository.getTemperaturesByDate(registeredAt.toLocalDate())).thenReturn(emptyList());
 
             temperatureService.deleteTemperaturesByDateOrTimestamp(registeredAt, dateOnly);
 
-            verify(temperatureRepository, times(1)).getTemperaturesByDate(registeredAt.toLocalDate());
+            verify(temperatureRepository).getTemperaturesByDate(registeredAt.toLocalDate());
             verify(temperatureRepository, times(0)).deleteTemperaturesByDate(registeredAt.toLocalDate());
-            assertThat(capturedOutput)
-                    .contains(String.format("Temperatures registeredAt=%s not found.", registeredAt));
         }
+    }
+
+    private TemperatureDto createTemperatureDto(LocalDateTime registeredAt, Double temp) {
+        return TemperatureDto.builder()
+                             .registeredAt(registeredAt)
+                             .temp(temp)
+                             .build();
     }
 }
